web/css/jquery-ui-override.css
/*
 * Default jquery-ui button
 */

a.ui-button.ui-state-default {
  color: #eee;
  font-weight: 700;
  border: 1px solid #666;
  font-size: 1em;
  background-image: linear-gradient(#555, #666);
  background-image: -ms-linear-gradient(#555, #666);
  background-image: -o-linear-gradient(#555, #666);
  font-family: "Segoe UI", "Arial", sans-serif;
}

a.ui-button.ui-state-default.ui-state-hover {
  border-color: #eee;
  background-color: #eee;
  background-image: none;
  color: #404040;
}

.ui-button.ui-state-disabled {
  pointer-events: auto;
}

.ui-button {
  padding: 0;
  color: #eee;
}

.wv-menu-item-selected {
  background: #888;
  color: #eee;
}

.ui-menu {
  position: absolute;
  width: 150px;
  padding: 0;
  z-index: 1000;
}

/* Allow Font Awesome Icons in lieu of jQuery UI and only apply when using a FA icon
 * Remove the jQuery UI Icon
 * Remove the jQuery UI Text Indent
 */
.ui-icon[class*=" fa-"] {
  background: none repeat scroll 0 0 transparent;
  text-indent: 0;
}

.ui-button-icon-only .ui-icon[class*=" fa-"] {
  margin-left: -7px;
}

.ui-widget.ui-widget-content {
  border: 0;
}

.ui-widget-content {
  color: #fff;
  background: rgb(40, 40, 40);
  border: 0;
  border-radius: 0;
}

.ui-widget-content.wv-opaque {
  background: #222;
}

.ui-dialog {
  padding: 0;
  z-index: 600;
}

.ui-dialog .ui-dialog-titlebar {
  padding: 0.4em 1em;
  border: 1px solid #333;
}

.ui-dialog .ui-dialog-content {
  color: #fff;
  background-image: none;
  padding-top: 15px;
  padding-bottom: 15px;
}

.ui-corner-all {
  border-radius: 0;
}

button.ui-button:focus .ui-icon-closethick,
button.ui-button .ui-icon-closethick {
  background-position: 0 0;
  background-image: url("../images/close.png");
}

button.ui-button:hover .ui-icon-closethick {
  background-position: 0 0;
  background-image: url("../images/close-highlight.png");
}

.ui-tooltip {
  background: #eee;
}

.ui-tooltip-content {
  color: #000;
}

.link,
.ui-widget-content a,
a {
  color: #7bf;
  text-decoration: none;
  cursor: pointer;
}

.link:hover,
a:hover {
  color: #9df;
}

.ui-menu-item a {
  color: #fff;
}

.ui-accordion .ui-accordion-content {
  background: rgba(0, 0, 0, 0);
}

.error-icon {
  margin-right: 10px;
  vertical-align: middle;
}

.error-header {
  margin-top: 5px;
}

.error-body {
  margin-top: 10px;
}

.ui-menu-item {
  font-size: 13px;
}

.ui-menu-item i {
  font-size: 15px;
}

.iCheck-checkbox {
  margin: 0 10px;
  background-position: -24px 0;
}

.iCheck-radio {
  background-position: -144px 0;
}

label {
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.wv-panel {
  border: 1px solid #333;
  box-sizing: content-box;
}

.wv-panel .ui-dialog-titlebar {
  background: rgb(40, 40, 40);
  border: 0;
  border-bottom-left-radius: 0;
  border-bottom-right-radius: 0;
}

.ui-widget-overlay {
  background: #000;
  opacity: 0.4;
}

.ui-widget-header {
  color: #fff;
  background: rgb(40, 40, 40);
}

.ui-widget-header .ui-button {
  background: none transparent;
  border: 0;
}

.ui-widget-header .ui-button:hover {
  background: #fff;
}

.wv-panel .ui-dialog-content {
  padding: 0 1em 1em;
}

.wv-panel .ui-dialog-title {
  font-weight: 400;
  color: #fff;
}

/* style for UI dialog buttons that are hovered over */
.ui-widget-content .ui-state-hover {
  border-color: #eee;
  background-color: #eee;
  background-image: none;
  color: #404040;
}

/* style for UI info select menu that are hovered over */
.ui-widget-content .ui-state-focus {
  border-color: #eee;
  background-color: #eee;
  background-image: none;
  color: #404040;
}

.ui-widget-content .ui-state-focus.ui-menu-item a {
  color: #404040;
}

.ui-state-focus:focus {
  outline: none !important;
}

.ui-state-focus a:focus {
  outline: none !important;
}

.ui-widget-content .ui-dialog-titlebar-close.ui-state-focus {
  background: none;
}

.ui-visual-focus {
  -webkit-box-shadow: none;
  box-shadow: none;
}

.ui-button.ui-state-active:hover,
.ui-button:active,
.ui-state-active,
.ui-widget-content .ui-state-active,
.ui-widget-header .ui-state-active,
a.ui-button:active {
  font-weight: 300;
  border: 0;
  background: transparent;
}

.ui-dialog-buttonpane .ui-dialog-buttonset .ui-button {
  padding: 0.4em 1em;
  border: 1px solid #666;
  background: #242424;
  font-weight: 700;
  color: #eee;
}

.ui-dialog-buttonpane .ui-dialog-buttonset .ui-button:hover {
  border-color: #eee;
  background-color: #eee;
  background-image: none;
  color: #404040;
}

/* Counter intuitive override: All OpenLayers overlays get the
ol-selectable class added automatically, but we don't want map markers
or dateline overlays to be selectable. */
.ol-selectable {
  -webkit-user-select: none !important;
  -moz-user-select: none !important;
  -ms-user-select: none !important;
  user-select: none !important;
}

.wv-map-zoom:focus,
.wv-map-zoom.ui-button.ui-state-disabled:hover {
  border: 1px solid #333;
  color: #eeee;
  background-color: rgba(40, 40, 40, 0.85);
}
#wv-toolbar .ui-button.ui-state-disabled:hover {
  color: #eeee;
}

/* Overide jQuery joyride */
body {
  position: static;
}

